# hw_1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c  main.h  test_func.cpp  users.c  users.h  users.txt
ci/travis/: install-linux.sh
cmake_files/: analysers.cmake  clang-format.cmake  coverage.cmake  cppcheck.cmake  tests.cmake
lib/users/: CMakeLists.txt
lib/users/include/: users.h
lib/users/src/: users.c
lib/users/tests/: CMakeLists.txt  test_users.txt
lib/users/tests/src/: test_func.cpp
src/: main.c
